@@ -483,7 +483,7 @@ void Index(void)
 		Syslog('!', "Create dir: %s", area.Path);
 		newdir = xstrcpy(area.Path);
 		newdir = xstrcat(newdir, (char *)"/");
-		mkdirs(newdir);
+		mkdirs(newdir, 0755);
 		free(newdir);
 		newdir = NULL;
 	    }
